--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@mirohq/prettier-config": "^1.0.0",
     "dotenv": "^10.0.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
